# lpc1114fn28

./: .gitignore  CMakeLists.txt  CMakePreset.json  Makefile
freertos/inc/: FreeRTOSCommonHooks.h  FreeRTOSConfig.h
freertos/src/: FreeRTOSCommonHooks.c
src/: cr_startup_lpc11xx.c  lpc1114.ld  main.cpp
